# LR7

Task_1/: CMakeLists.txt  main.cpp  number_conversion.cpp  number_conversion.h
Task_2/: CMakeLists.txt  main.cpp  number_conversion.cpp  number_conversion.h
Task_3/: CMakeLists.txt  funcs.cpp  header.h  main.cpp
Task_4/: CMakeLists.txt  main.cpp  number_divisibility.cpp  number_divisibility.h
Task_5/: CMakeLists.txt  io.cpp  main.cpp  solve.h
